# nativeIMS-processing-tools

./: .gitignore  BEGINNERS_GUIDE.md  EXTRACTION_PLAN.md  FUNCTIONS_GUIDE.md  LICENSE  PAGE2_REFACTORING.md  PAGE_6_REFACTORING_SUMMARY.md  QUICKSTART.md  README.md  README_PACKAGE.md  USAGE_EXAMPLES.py  VISUAL_SUMMARY.md  app.py  pyproject.toml  requirements.txt  setup.py  simple_tests.py  temp_10.txt  temp_20.txt  temp_30.txt  temp_40.txt  test_ccs_units.py  test_dtims_correct.py  test_mason_schamp_forms.py
JOSS_PACKAGE/: .gitignore  CONTRIBUTING.md  INSTALL.md  PACKAGE_INFO.md  README.md  app.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  setup_package.py
JOSS_PACKAGE/imspartacus/: __init__.py
JOSS_PACKAGE/imspartacus/calibration/: __init__.py  database.py  processor.py  utils.py
JOSS_PACKAGE/imspartacus/extraction/: input_generator.py  output_processor.py
JOSS_PACKAGE/imspartacus/fitting/: __init__.py  ccsd_processor.py  data_processor.py  fitting_engine.py  parameter_estimation.py  parameter_manager.py  result_analyzer.py
JOSS_PACKAGE/imspartacus/io/: __init__.py  range_generator.py  readers.py  writers.py
JOSS_PACKAGE/imspartacus/processing/: drift_calibration.py  origami.py  visualization.py
JOSS_PACKAGE/imspartacus/visualization/: __init__.py
JOSS_PACKAGE/myutils/: dtims.py  import_tools.py  origami.py
JOSS_PACKAGE/pages/: 10_origami_ciu.py  1_calibrate.py  2_generate_input_files.py  3_process_output_files.py  4_get_calibrated_data.py  5_plot_ccsds.py  6_fit_data.py  7_plot_mass_spectra.py  8_generate_range_files.py  9_esiprot.py
data/: bush.csv
docs/: MODULARIZATION.md  PAGE_6_REFACTORING_COMPLETE.md
myutils/: data_tools.py  import_tools.py  styling.py
nativeims/: README.md  __init__.py
nativeims.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nativeims/calibration/: __init__.py  processor.py
nativeims/extraction/: __init__.py
nativeims/fitting/: __init__.py  baseline_functions.py  ccsd_processor.py  data_processor.py  fitting_engine.py  peak_detection.py  peak_functions.py  result_analyzer.py
nativeims/io/: __init__.py
nativeims/processing/: __init__.py  esiprot.py
nativeims/visualization/: __init__.py  ccsd.py  mass_spectrum.py
pages/: 10_ESIProt.py  11_DTIMS_calibration.py  12_origami.py  1_calibrate.py  2_get_input_files.py  3_process_output_files.py  4_get_calibrated_scaled_data.py  5_plot_CCSDs.py  6_fit_data.py  7_plot_aIMS(CIU).py  8_plot_pretty_MS.py  9_generate_range_files.py
static/: styles.css
